# Password_Manager

./: .env.example  .gitignore  CHANGELOG.md  PRIVACY.md  README.md  app.py  auth.json  codecov.yml  crypto.salt  gui.py  initialize.py  migrate_db.py  pyproject.toml  random.txt  requirements.txt  setup.py
.github/workflows/: ci-cd.yml  ci.yml
apps/: app.py  gui.py
browser-extension/: PUBLISHING.md  README.md  background-firefox.js  background.js  build-all.sh  build-chrome.sh  build-firefox.sh  manifest-firefox.json  manifest.json  popup.html  popup.js
docs/: README.md  approval-prompts-implementation.md  architecture-reference.md  architecture.md  background-jobs-observability.md  browser-extension-ipc.md  build-release-handbook.md  contributing.md  current_status.md  data-model.md  development.md  getting-started.md  operations-runbook.md  release-pipeline.md  roadmap.md  security-whitepaper.md  security.md  testing-quality.md  user-manual.md  v1.8.0_improvements.md
docs/development/: database-schema.md  security-architecture.md  security.md
docs/user-guide/: first-time-setup.md
scripts/: archive_dist.sh  build.sh  build_appimage.sh  build_deb.sh  build_linux_app.sh  build_menu.sh  bump_version.py  cleanup.sh  cleanup_data.sh  initialize.py  migrate_to_production.py  uninstall_cleanup.py
src/secure_password_manager/: __init__.py
src/secure_password_manager/apps/: app.py  gui.py
src/secure_password_manager/services/: browser_bridge.py
src/secure_password_manager/utils/: approval_manager.py  auth.py  backup.py  bulk_operations.py  clipboard_manager.py  config.py  crypto.py  database.py  domain_socket.py  key_management.py  logger.py  migrations.py  parallel_security.py  password_generator.py  paths.py  payload_encryption.py  security_analyzer.py  security_audit.py  security_trending.py  tls.py
tests/: conftest.py  test_app_cli.py  test_approval_manager.py  test_auth.py  test_backup.py  test_browser_bridge.py  test_browser_bridge_approval.py  test_bulk_operations.py  test_clipboard_manager.py  test_config.py  test_crypto.py  test_crypto_advanced.py  test_domain_socket.py  test_gui_smoke.py  test_integration.py  test_interactive.py  test_isolation.py  test_key_management.py  test_logger.py  test_parallel_security.py  test_password_analysis.py  test_password_generator.py  test_password_history.py  test_paths.py  test_payload_encryption.py  test_security_analyzer.py  test_security_audit.py  test_security_trending.py  test_tls.py  test_two_factor.py  test_ui.py
utils/: backup.py  crypto.py  database.py  password_analysis.py  password_strength.py  security_analyzer.py
