[project]
name = "secure-password-manager"
dynamic = ["version"]
description = "A secure, local-first password manager with browser integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ArcheWizard", email = "your.email@example.com"}
]
keywords = [
    "password-manager",
    "security",
    "encryption",
    "local-first",
    "browser-extension"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=41.0.0",
    "PyQt5>=5.15.9",
    "pillow>=10.0.0",
    "zxcvbn>=4.4.28",
    "colorama>=0.4.6",
    "pyperclip>=1.8.2",
    "requests>=2.28.1",
    "pyotp>=2.8.0",
    "qrcode>=7.4.2",
    "typing-extensions>=4.7.1",
    "fastapi>=0.114.0",
    "uvicorn[standard]>=0.30.5",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
    "pytest-env>=1.1.0",
    "pytest-timeout>=2.1.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ArcheWizard/Password_Manager"
Documentation = "https://github.com/ArcheWizard/Password_Manager/tree/main/docs"
Repository = "https://github.com/ArcheWizard/Password_Manager"
Issues = "https://github.com/ArcheWizard/Password_Manager/issues"
Changelog = "https://github.com/ArcheWizard/Password_Manager/blob/main/CHANGELOG.md"

[project.scripts]
password-manager = "secure_password_manager.apps.app:main"
password-manager-gui = "secure_password_manager.apps.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }

[tool.setuptools.dynamic]
version = {file = "VERSION.txt"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -p pytestqt --timeout=300"
qt_api = "pyqt5"
timeout = 300  # 5 minute timeout per test
qt_no_wait = true  # Don't wait for Qt events in CI
# Set Qt platform for headless testing
env = [
    "QT_QPA_PLATFORM=offscreen",
    "PYTEST_QT_API=pyqt5"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/secure_password_manager"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/conftest.py",
]
branch = true

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"